syntax = "proto3";

package transaction;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/your-username/transaction-service/proto";

// Service gRPC untuk Transaksi
service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);
  rpc GetUserTransactions(GetUserTransactionsRequest) returns (GetUserTransactionsResponse);
}

// === Pesan untuk Request ===

message BookOrderItem {
  string book_id = 1;
  int32 quantity = 2;
}

message CreateTransactionRequest {
  string user_id = 1;
  repeated BookOrderItem items = 2;
}

message GetUserTransactionsRequest {
  string user_id = 1;
}


// === Pesan untuk Response ===

message TransactionDetail {
  string book_id = 1;
  int32 quantity = 2;
  double price_per_unit = 3;
}

message TransactionResponse {
  string transaction_id = 1;
  string user_id = 2;
  google.protobuf.Timestamp transaction_date = 3;
  double total_amount = 4;
  string status = 5;
  repeated TransactionDetail details = 6;
}

message GetUserTransactionsResponse {
  repeated TransactionResponse transactions = 1;
}